--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -51,15 +51,26 @@
 <main role="main" class="flex-shrink-0">
   <div class="container">
     <!-- <h1 class="mt-5">Sticky footer with fixed navbar</h1> -->
-    <h1 class="mt-5">こんにちは</h1>
-    <div class="middle-contents">
+    
+
+    <div class="left-contents">
+      <h1 class="mt-5">こんにちは</h1>
       <div class="client-index">
-         <div class="box">顧客一覧</div>
+        <a class="btn-circle" href="#">
+          <span>顧客一覧</span>
+        </a>
       </div>
-      <div class="todays-task">
-        <div class="box">Todays task</div>
+      <div class="task-index">
+        <a class="btn-circle" href="#">
+          <span>タスク一覧</span>
+        </a>
       </div>
     </div>
+
+    <div class="right-contents">
+     <a class="todays-task">今日のタスク</a>
+    </div>
+
   </div>
 </main>
 
