--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -37,12 +37,13 @@
           <a class="nav-link disabled" href="#">無効</a>
         </li> %>
       </ul>
-      <form class="form-inline mt-2 mt-md-0">
+      <%# けんさく %>
+      <%# <form class="form-inline mt-2 mt-md-0">
         <!-- <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
         <input class="form-control mr-sm-2" type="text" placeholder="検索" aria-label="Search">
         <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">検索</button>
-      </form>
+      </form> %>
     </div>
   </nav>
 </header>
