--- a/app/assets/stylesheets/sticky-footer-navbar.css
+++ b/app/assets/stylesheets/sticky-footer-navbar.css
@@ -32,6 +32,7 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #434a54;
 }
 
 .client-index{
@@ -101,6 +102,7 @@ code {
 .btn-circle:hover {
   color: #000;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
 }
 .btn-circle:hover:after {
   width: 0;
