--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -58,12 +58,12 @@
       <h1 class="mt-5">こんにちは</h1>
       <div class="client-index">
         <a class="btn-circle" href="#">
-          <span>顧客一覧</span>
+          <span class="text-a">顧客一覧</span>
         </a>
       </div>
       <div class="task-index">
         <a class="btn-circle" href="#">
-          <span>タスク一覧</span>
+          <span class="text-a">タスク一覧</span>
         </a>
       </div>
     </div>
