--- a/app/views/devise/registrations/_signup.html.erb
+++ b/app/views/devise/registrations/_signup.html.erb
@@ -4,9 +4,11 @@
   </head>
 
   <body>
-    <%= form_with model: @user, url: user_registration_path, method: :post, class: 'registration-main', local: true do |f| %>
+    <h3 class="text-b">新規登録</h3>
+    <%= form_with model: @user, url: user_registration_path, method: :post, class: 'registration-up', local: true do |f| %>
       <%# <%= render 'shared/error_messages', model: f.object %>
       <div class="form-group">
+      
         <div class='form-text-wrap'>
           <label class="form-text">お名前(全角)</label>
           <span class="indispensable">必須</span>
