--- a/app/assets/stylesheets/tops/tops.css
+++ b/app/assets/stylesheets/tops/tops.css
@@ -31,16 +31,12 @@
   height: 200px;
   width: 300px;
   padding: 30px;
-  
-}
-.client-index{
-  margin: 30px;
 }
 .client-index{
   margin: 10px 30px 30px 30px;
 }
-.text-a{
 
+.text-a:hover{
 }
 .btn-circle {
   display: inline-block;
@@ -85,7 +81,6 @@
   transition: all 0.4s;
 }
 .btn-circle:hover {
-  color: #000;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   text-decoration: none;
 }
