--- a/app/views/devise/registrations/_b-header.html.erb
+++ b/app/views/devise/registrations/_b-header.html.erb
@@ -10,7 +10,7 @@
       </h1>
       <nav class="pc-nav">
         <ul>
-          <li><%= link_to 'ログイン', new_user_session_path, method: :get, class: "sign" %></li>
+          <li><%= link_to 'ログイン', new_user_session_path, method: :get, class: "btn-b" %></li>
         </ul>
       </nav>
     </header>
