--- a/app/views/tops/_a-header.html.erb
+++ b/app/views/tops/_a-header.html.erb
@@ -12,10 +12,10 @@
         <ul>
           <% if user_signed_in? %>
             <%# <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
-            <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "sign" %></li> 
+            <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "btn-b" %></li> 
           <% else %>
-            <li><%= link_to 'ログイン', new_user_session_path, method: :get, class: "sign" %></li>
-            <li><%= link_to '新規登録',  new_user_registration_path, method: :get, class: "sign" %></li>
+            <li><%= link_to 'ログイン', new_user_session_path, method: :get, class: "btn-b" %></li>
+            <li><%= link_to '新規登録',  new_user_registration_path, method: :get, class: "btn-b" %></li>
           <% end %>
         </ul>
       </nav>
