--- a/app/assets/stylesheets/shared/_btn.css
+++ b/app/assets/stylesheets/shared/_btn.css
@@ -81,10 +81,12 @@
 	background: #fff;
   border:1px solid #1B1B1B;
   font-weight: bold;
+  z-index:100;
 }
 .btn-c:hover {
 	 background: #E85A70;
          color: #fff;
 	 cursor: pointer;
-	 text-decoration: none;
+   text-decoration: none;
+   z-index:100;
 }
