--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,6 +1,13 @@
 <%= render "tops/a-header"%>
 
 <div class="parent">
+  <h3 class="text-c">登録済み顧客一覧</h3>
+  <ol class="clients">
+    <% @allclients.each do |c| %>
+      <li class="client"><%= c.last_name %><%= " " %><%= c.first_name %></li>
+    <% end %>
+  </ol>
+
   <div class="child-a">
     <%= link_to '新規顧客登録', new_client_path, method: :get, class: "btn-c" %>
   </div>
