--- a/app/assets/stylesheets/devise/signin.css
+++ b/app/assets/stylesheets/devise/signin.css
@@ -67,7 +67,9 @@
   margin-top: 3px;
 }
 
-.text-b{
-  margin-top: 150px ;
+.child-a{
+  margin-top: 120px;
+  height: 70px;
   text-align: center;
+  padding: auto ;
 }
