--- a/app/assets/stylesheets/shared/btn.css
+++ b/app/assets/stylesheets/shared/btn.css
@@ -72,7 +72,6 @@
 
 .btn-c{
 	display: block;
-	position: relative;
 	width: 160px;
 	padding: 0.8em;
 	text-align: center;
@@ -90,3 +89,41 @@
    text-decoration: none;
    z-index:100;
 }
+.btn-d{
+	display: block;
+	width: 160px;
+	padding: 0.8em;
+	text-align: center;
+	text-decoration: none;
+	color: #1B1B1B;
+	background: #fff;
+  border:1px solid #1B1B1B;
+  font-weight: bold;
+  z-index:100;
+}
+.btn-d:hover {
+	 background: #0C88CA;
+         color: #fff;
+	 cursor: pointer;
+   text-decoration: none;
+   z-index:100;
+}
+.btn-e{
+	display: block;
+	width: 160px;
+	padding: 0.8em;
+	text-align: center;
+	text-decoration: none;
+	color: #1B1B1B;
+	background: #fff;
+  border:1px solid #1B1B1B;
+  font-weight: bold;
+  z-index:100;
+}
+.btn-e:hover {
+	 background: #ffa300;
+         color: #fff;
+	 cursor: pointer;
+   text-decoration: none;
+   z-index:100;
+}#ffa300
