--- a/app/views/devise/registrations/_signup.html.erb
+++ b/app/views/devise/registrations/_signup.html.erb
@@ -4,11 +4,15 @@
   </head>
 
   <body>
-    <h3 class="text-b">新規登録</h3>
+    <div class="child-a">
+      <h3 class="text-title">新規登録</h3>
+    </div>
+
     <%= form_with model: @user, url: user_registration_path, method: :post, class: 'registration-up', local: true do |f| %>
-      <%# <%= render 'shared/error_messages', model: f.object %>
-      <div class="form-group">
       
+      <%= render 'shared/error_messages', model: f.object %>
+
+      <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">お名前(全角)</label>
           <span class="indispensable">必須</span>
@@ -18,6 +22,7 @@
           <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 太郎" %>
         </div>
       </div>
+
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">お名前カナ(全角)</label>
@@ -28,6 +33,7 @@
           <%= f.text_area :first_kana, class:"input-name", id:"first-name-kana", placeholder:"例) タロウ" %>
         </div>
       </div>
+
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">メールアドレス</label>
@@ -35,6 +41,7 @@
         </div>
         <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
       </div>
+
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">パスワード</label>
