編集機能の実装

--- a/app/assets/stylesheets/clients/show.css
+++ b/app/assets/stylesheets/clients/show.css
@@ -24,7 +24,7 @@
 
 .standard-info,
 .add-info{
-  background-color: black;
+  background-color:;
   width: 550px;
   display: flex;
   display: block;
