--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -68,7 +68,7 @@
         <% end %>
       </li>
       <div class="edit-standard">
-        <%= link_to '編集する', clients_path, method: :get, class: "btn-d" %>
+        <%= link_to '編集する', edit_client_path(@client), method: :get, class: "btn-f" %>
       </div>
     </ul>
     
