--- a/app/assets/stylesheets/shared/btn.css
+++ b/app/assets/stylesheets/shared/btn.css
@@ -147,3 +147,23 @@
    text-decoration: none;
    z-index:100;
 }
+.btn-g{
+	display: block;
+	width: 250px;
+	padding: 0.8em;
+	text-align: center;
+	text-decoration: none;
+	color: #1B1B1B;
+	background: #fff;
+  border:1px solid #1B1B1B;
+  font-weight: bold;
+	z-index:100;
+	margin: 0 auto;
+}
+.btn-g:hover {
+	 background: #ffa300;
+         color: #fff;
+	 cursor: pointer;
+   text-decoration: none;
+   z-index:100;
+}
