--- a/app/assets/stylesheets/shared/btn.css
+++ b/app/assets/stylesheets/shared/btn.css
@@ -167,3 +167,22 @@
    text-decoration: none;
    z-index:100;
 }
+.btn-h {
+	margin: 0 auto;
+	margin-top: 30px;
+  max-width: 180px;
+  text-align: left;
+  background-color: #ffa300;
+  font-size: 16px;
+  color: #FFF;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 10px 24px;
+  border-radius: 4px;
+  border-bottom: 4px solid #d37800;
+}
+
+.btn-h:active {
+  transform: translateY(4px);
+  border-bottom: none;
+}
