--- a/app/assets/stylesheets/clients/show.css
+++ b/app/assets/stylesheets/clients/show.css
@@ -17,7 +17,7 @@
 .child-c{
   display: flex;
   justify-content: space-around;
-  /* background-color: lightcoral; */
+  background-color: #3333;
   /* height: calc(100vh - 200px); */
   padding: 10px 0;
 }
@@ -43,4 +43,11 @@
   width: 130px;
   text-align: right;
   margin-right: 10px;
+}
+.btn-box{
+  background-color: #3333;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  padding: 30px 0;
 }
