--- a/app/assets/stylesheets/shared/btn.css
+++ b/app/assets/stylesheets/shared/btn.css
@@ -138,7 +138,7 @@
   border:1px solid #1B1B1B;
   font-weight: bold;
 	z-index:100;
-	margin: 0 auto;
+	margin-left:270px
 }
 .btn-f:hover {
 	 background: #ffa300;
@@ -158,7 +158,7 @@
   border:1px solid #1B1B1B;
   font-weight: bold;
 	z-index:100;
-	margin: 0 auto;
+	margin-right:220px ;
 }
 .btn-g:hover {
 	 background: #ffa300;
