--- a/app/views/forms/edit.html.erb
+++ b/app/views/forms/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render "tops/a-header" %>
 
 <div class="child-a">
-      <h3 class="text-title">追加フォームの編集</h3>
+      <h3 class="text-title">追加フォームの名前を編集</h3>
 </div>
 
 <%= form_with model: @form, url: form_path(@form), method: :put, class:"add-form-parent", local: true do |f| %>
