--- a/app/assets/stylesheets/devise/signup.css
+++ b/app/assets/stylesheets/devise/signup.css
@@ -41,12 +41,29 @@
   width: 100%;
   height: 20%;
 }
+.form-add-text-wrap {
+  width: 100%;
+  height: 20%;
+}
 
 .form-text {
   font-size: 14px;
   font-weight: bold;
 }
 
+.add-text-input {
+  width: 50%;
+  height: 48px;
+  padding: 10px 16px 8px;
+  margin: 0 auto;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background: #fff;
+  font-size: 16px;
+  resize: none;
+  display: flex;
+  flex-direction: column;
+}
 .input-default {
   width: 100%;
   margin-top: 5px;
